<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/fragmentLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginBeforeCredentials"
        android:layout_marginBottom="@dimen/marginAfterCredentials">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginHint"
            android:layout_marginBottom="@dimen/marginBetweenCredentials"
            android:padding="@dimen/credentialsPaddings"
            android:paddingStart="@dimen/credentialsPaddingLeft"
            android:textSize="@dimen/credentialsFontSize"
            android:background="@drawable/credentials_border"
            android:inputType="textVisiblePassword"
            android:text="govjad"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:padding="@dimen/credentialsPaddings"
            android:paddingStart="@dimen/credentialsPaddingLeft"
            android:textSize="@dimen/credentialsFontSize"
            android:background="@drawable/credentials_border"
            android:inputType="textPassword"
            android:text="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logInButtonText"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/credentialsFontSize"
            android:padding="@dimen/loginButtonsPadding"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerButtonText"
            android:background="@drawable/credentials_border"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/credentialsFontSize"
            android:padding="@dimen/loginButtonsPadding" />
    </LinearLayout>

</LinearLayout>